@@ -1,3 +1,11 @@
+2006-01-09  Rodrigo Moya <rodrigo@novell.com>
+
+	Fixes #326141
+
+	* drwright.c (popup_preferences_cb):
+	* egg-spawn.[ch]:
+	* Makefile.am: kill egg_spawn_* functions, use gdk_spawn_* instead.
+
 2005-11-27  Richard Hult  <richard@imendio.com>
 
 	* main.c: (main): Don't display a dialog when the monitor is
